coffees.html, coffees-single and blends thru validator

--- a/coffees.html
+++ b/coffees.html
@@ -2,20 +2,21 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <script src="https://kit.fontawesome.com/877201db70.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-  <title>Coffee Project Co.</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<script src="https://kit.fontawesome.com/877201db70.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+	<title>Coffee Project Co.</title>
 </head>
 
 <body>
 
-  <header>
+	<header>
 
-<!-- navbar -->
+		<!-- navbar -->
 
 		<nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html">
 				<img src="./assets/images/coffee-project-logo.png" width="100" alt="coffeeproject-logo"></a>
@@ -28,23 +29,25 @@
 							<a class="nav-link" href="coffees.html">Coffees</a>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Courses</a>
+							<a class="nav-link dropdown-toggle" href="#" id="navbardrop"
+								data-toggle="dropdown">Courses</a>
 							<div class="dropdown-menu">
 								<a class="dropdown-item" href="intro.html">Intro to coffee</a>
 								<a class="dropdown-item" href="barista-sca.html">Barista SCA</a>
 								<a class="dropdown-item" href="brewing-sca.html">Brewing SCA</a>
 							</div>
 						</li>
-                        <li class="nav-item">
+						<li class="nav-item">
 							<a class="nav-link" href="brewing.html">Guides</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="contact.html">Contact</a>
 						</li>
 					</ul>
-                    <div class="col d-inline-flex justify-content-right d-sm-none d-lg-inline">
+
+					<div class="col d-inline-flex justify-content-center d-sm-none d-lg-inline">
 						<ul class="list-inline navmedia">
-                            <li class="list-inline-item">
+							<li class="list-inline-item">
 								<a href="https://www.facebook.com/" target="_blank">
 									<i class="fab fa-facebook-f" aria-hidden="true"></i>
 									<span class="sr-only">Facebook</span>
@@ -61,7 +64,7 @@
 									<span class="sr-only">LinkedIn</span>
 								</a>
 							</li>
-                            <li class="list-inline-item">
+							<li class="list-inline-item">
 								<a href="https://www.pinterest.com/" target="_blank">
 									<i class="fab fa-pinterest" aria-hidden="true"></i>
 									<span class="sr-only">Pinterest</span>
@@ -74,91 +77,101 @@
 								</a>
 							</li>
 						</ul>
+					</div>
 				</div>
 		</nav>
 
 
 
-  </header>
+	</header>
 
-  <!-- main coffees section -->
+	<!-- main coffees section -->
 
-  <div class="container main-container">
-    <div class="container headers-landing">
-      <div class="row no-gutters">
-        <div class="col">
-          <img src="./assets/images/ourcoffee.jpg" alt="roasted coffee beans image" class="ourcoffees-img">
-          <p class="ph-landing">Coffees</p>
-        </div>
-      </div>
-    </div>
-  </div>
+	<div class="container main-container">
+		<div class="container headers-landing">
+			<div class="row no-gutters">
+				<div class="col">
+					<img src="./assets/images/ourcoffee.jpg" alt="roasted coffee beans image" class="ourcoffees-img">
+					<p class="ph-landing">Coffees</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
-  <div class="container coffees-container mt-4">
-  <div class="row no-gutters">
-  <div class="col coffee-text">
-    <p>We carefully source and choose our coffee offerings to represent the uniqueness of each origin.</p>
-    <p>Then, we roast and blend based on two main philosophies: to preserve and highlight the natural characteristics of the original bean and to ensure that a cup of <em>Coffee Project Co.</em> beans coffee will always taste as good as it smells.</p>
-    </div>
+	<div class="container coffees-container mt-4">
+		<div class="row no-gutters">
+			<div class="col coffee-text">
+				<p>We carefully source and choose our coffee offerings to represent the uniqueness of each origin.</p>
+				<p>Then, we roast and blend based on two main philosophies: to preserve and highlight the natural
+					characteristics of the original bean and to ensure that a cup of <em>Coffee Project Co.</em> beans
+					coffee will always taste as good as it smells.</p>
+			</div>
 
-  </div></div>
+		</div>
+	</div>
 
-  <!-- cards for beans section -->
+	<!-- cards for beans section -->
 
-  <div class="container mt-3">
-    <div class="card-deck">
-      <div class="row no-gutters">
+	<div class="container mt-3">
+		<div class="card-deck">
+			<div class="row no-gutters">
 
-        <div class="col-10 offset-1 col-lg-4">
-          <div class="card my-border mb-4">
-          <div class="card-single">
-            <div class="card-header">
-              <h4 class="uppercase text-center">Single Origin</h4>
-            </div>
-            <img class="card-img-top" src="./assets/images/single-origin-card1.png" alt="Kettle pouring into chemex image">
-            <div class="card-body">
-              <p class="card-text">This is where the fun is. These are seasonal coffees that are constantly changing. Often we buy entire micro lots, giving us world exclusivity on that coffee – when we do this you know that the coffee is truly exceptional.</p>
-              <div class="text-center"><a href="coffees-single.html" class="btn my-button">Read more</a></div>
-            </div>
-          </div>
-        </div>
-        </div>
+				<div class="col-10 offset-1 col-lg-4">
+					<div class="card my-border mb-4">
+						<div class="card-single">
+							<div class="card-header">
+								<h4 class="uppercase text-center">Single Origin</h4>
+							</div>
+							<img class="card-img-top" src="./assets/images/single-origin-card1.png" alt="Kettle pouring into chemex image">
+							<div class="card-body">
+								<p class="card-text">This is where the fun is. These are seasonal coffees that are
+									constantly changing. Often we buy entire micro lots, giving us world exclusivity on
+									that coffee – when we do this you know that the coffee is truly exceptional.</p>
+								<div class="text-center"><a href="coffees-single.html" class="btn my-button">Read
+										more</a></div>
+							</div>
+						</div>
+					</div>
+				</div>
 
-        <div class="col-10 offset-1 col-lg-4">
+				<div class="col-10 offset-1 col-lg-4">
 
-          <div class="card my-border mb-4">
-            <div class="card-header">
-              <h4 class="uppercase text-center">Blends</h4>
-            </div>
-            <img class="card-img-top" src="./assets/images/blends-card2.png" alt="Espresso machine and cups image">
-            <div class="card-body">
-              <p class="card-text">With every new crop, beans change subtly. With every new coffee we import, a new blend awaits. We know that creating the "perfect" blend is a futile persuit but we really love trying and we know you'll enjoy what we create.</p>
-              <div class="text-center"><a href="coffees-blends.html" class="btn my-button">Read more</a></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  </div>
-
-  <!-- link to order form -->
-
-  <div class="container">
-				<div class="row no-gutters">
-					<div class="col-12">
-						<div class="text-center">
-							<h3 class="uppercase form-heading">Place your order now!</h3>
-							<p>Remember that your shipping is free on orders over EUR 30.</p>
-                            <a class="btn btn-lg" href="https://form.jotformeu.com/92817292835366" target="_blank" role="button" style="color:#fff; background-color: #fe5f55;">Order Here</a>
-                            <p><small>Ships same day if order placed before 2pm.</small>
-							</p>
+					<div class="card my-border mb-4">
+						<div class="card-header">
+							<h4 class="uppercase text-center">Blends</h4>
+						</div>
+						<img class="card-img-top" src="./assets/images/blends-card2.png" alt="Espresso machine and cups image">
+						<div class="card-body">
+							<p class="card-text">With every new crop, beans change subtly. With every new coffee we
+								import, a new blend awaits. We know that creating the "perfect" blend is a futile
+								persuit but we really love trying and we know you'll enjoy what we create.</p>
+							<div class="text-center"><a href="coffees-blends.html" class="btn my-button">Read more</a>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+		</div>
+	</div>
 
-<!-- footer -->
+	<!-- link to order form -->
+
+	<div class="container">
+		<div class="row no-gutters">
+			<div class="col-12">
+				<div class="text-center">
+					<h3 class="uppercase form-heading">Place your order now!</h3>
+					<p>Remember that your shipping is free on orders over EUR 30.</p>
+					<a class="btn btn-lg" href="https://form.jotformeu.com/92817292835366" target="_blank" role="button"
+						style="color:#fff; background-color: #fe5f55;">Order Here</a>
+					<p><small>Ships same day if order placed before 2pm.</small>
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- footer -->
 
 	<footer>
 		<div class="footer">
@@ -213,10 +226,10 @@
 							<li class="list-inline-item footer-inline">
 								<p>1 Peaberry Street, D1 | A12 BC34</p>
 							</li>
-                            <li class="list-inline-item footer-inline">
+							<li class="list-inline-item footer-inline">
 								<p>hi@coffeeproject.ie</p>
 							</li>
-                            <li class="list-inline-item footer-inline">
+							<li class="list-inline-item footer-inline">
 								<p>(01) 2148634</p>
 							</li>
 						</ul>
@@ -233,9 +246,15 @@
 		</div>
 	</footer>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+	</script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+	</script>
 </body>
 
 
